# git_trial

./: .gitmodules  CMakeLists.txt  README  README.md
include/: CMakeLists.txt  hoge.hpp  lib.cpp  lib.hpp  lib_header_only.hpp  static_lib.hpp
src/: CMakeLists.txt  main.cpp  static_lib.cpp
test/: CMakeLists.txt  hello_boost_test.cpp  hello_iutest.cpp  main.cpp
